lang/tests/derive/sol/ui/fail/01-empty-struct.rs
use liquid::{InOut, State};
use liquid_lang as liquid;

#[derive(InOut, State)]
pub struct MyStruct {}

fn main() {}
