lang/tests/derive/sol/ui/fail/01-empty-struct.stderr
error: empty structs are not supported
 --> $DIR/01-empty-struct.rs:5:21
  |
5 | pub struct MyStruct {}
  |                     ^^
